manifests/rancher/ReferenceGrant-cattle-system-sfdr-me.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: cattle-system-sfdr-me
  namespace: cattle-system
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network
  to:
    - group: ""
      kind: Service
