manifests/rancher/Deployment-rancher.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rancher
    chart: rancher-2.14.3
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher
        release: rancher
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/os
                    operator: NotIn
                    values:
                      - windows
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - rancher
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - args:
            - --http-listen-port=80
            - --https-listen-port=443
            - --add-local=true
          image: rancher/rancher:v2.14.3
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          name: rancher
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 443
              protocol: TCP
            - containerPort: 444
              protocol: TCP
            - containerPort: 6666
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: 80
            periodSeconds: 10
            timeoutSeconds: 5
      priorityClassName: rancher-critical
      serviceAccountName: rancher
      tolerations:
        - effect: NoSchedule
          key: cattle.io/os
          operator: Equal
          value: linux
