manifests/rancher/Service-rancher-internal.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rancher
    chart: rancher-2.14.3
    heritage: Helm
    release: rancher
  name: rancher-internal
  namespace: cattle-system
spec:
  ports:
    - name: https-internal
      port: 443
      protocol: TCP
      targetPort: 444
  selector:
    app: rancher
  type: ClusterIP
