manifests/rancher/Service-rancher.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rancher
    chart: rancher-2.14.3
    heritage: Helm
    release: rancher
  name: rancher
  namespace: cattle-system
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: rancher
